# management_reports_app

./: README.md  pyproject.toml
management_reports_app/: hooks.py  modules.txt
management_reports_app/mgt_reports/report/item_budget_variance_report/: item_budget_variance_report.js  item_budget_variance_report.json  item_budget_variance_report.py
management_reports_app/mgt_reports/report/item_qty_budget_based_report/: item_qty_budget_based_report.js  item_qty_budget_based_report.json  item_qty_budget_based_report.py
management_reports_app/mgt_reports/report/monthly_actual_vs_budget/: monthly_actual_vs_budget.js  monthly_actual_vs_budget.json  monthly_actual_vs_budget.py
management_reports_app/mgt_reports/report/monthly_actual_vs_budget_(other_revenue)/: monthly_actual_vs_budget_(other_revenue).js  monthly_actual_vs_budget_(other_revenue).json  monthly_actual_vs_budget_(other_revenue).py
management_reports_app/mgt_reports/report/monthly_current_month_vs_last_month/: monthly_current_month_vs_last_month.js  monthly_current_month_vs_last_month.json  monthly_current_month_vs_last_month.py
management_reports_app/mgt_reports/report/productive_report/: productive_report.js  productive_report.json  productive_report.py
management_reports_app/mgt_reports/report/profit_and_loss_summary_statement/: profit_and_loss_summary_statement.js  profit_and_loss_summary_statement.json  profit_and_loss_summary_statement.py
management_reports_app/mgt_reports/report/total_value_and_volume_item_budget/: total_value_and_volume_item_budget.js  total_value_and_volume_item_budget.json  (+1 more)
